@@ -79,7 +79,7 @@ class WrappersTestCase(WerkzeugTestCase):
         assert resp.mimetype_params == {'charset': 'utf-8'}
         resp.mimetype_params['charset'] = 'iso-8859-15'
         assert resp.charset == 'iso-8859-15'
-        resp.data = u'Hällo Wörld'
+        resp.set_data(u'Hällo Wörld')
         assert b''.join(resp.iter_encoded()) == \
                u'Hällo Wörld'.encode('iso-8859-15')
         del resp.headers['content-type']
